force-app/main/default/objects/Coface_Report_History__c/Coface_Report_History__c.object-meta.xml
<CustomObject>
    <label>Coface Report History</label>
    <nameField>
        <displayFormat>History-{YYYY}{MM}{DD}-{0}</displayFormat>
        <label>Coface Report History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Coface Report History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>