force-app/main/default/objects/Coface_Report_History__c/fields/Coface_Report__c.field-meta.xml
<CustomField>
    <fullName>Coface_Report__c</fullName>
    <label>Coface Report</label>
    <referenceTo>Coface_Report__c</referenceTo>
    <relationshipName>Coface_Reports_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>