force-app/main/default/objects/Coface_Report_History__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>