force-app/main/default/objects/Coface_Report_History__c/fields/Notification_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Id__c</fullName>
    <externalId>true</externalId>
    <label>Notification Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>